# rtp_midi_netsync

./: .gitignore  Cargo.toml  readme.md
c_ffi_tests/: Makefile  test_config.mk  test_ffi.c  test_ffi.sh  test_ffi_comprehensive.c  test_ffi_performance.c  test_ffi_stress.c  test_header_ffi.c  test_header_ffi.sh
include/: rtp_midi_netsync.h
src/: error.rs  ffi.rs  header.rs  lib.rs  midi.rs  mtc.rs  netsync.rs
tests/: midi_tests.rs  mtc_tests.rs  netsync_tests.rs
