[package]
name = "rtp_midi_netsync"
version = "0.1.0"
edition = "2021"

[lib]
name = "rtp_midi_netsync"
crate-type = ["staticlib", "rlib"]

[dependencies]

[dev-dependencies]
criterion = "0.4"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
